Project/phase2/y.output
Terminals unused in grammar

   EQUAL


Grammar

    0 $accept: program "end of file"

    1 program: %empty
    2        | program function

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY
    4         | FUNCTION IDENT error BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    5 Declarations: %empty
    6             | Declarations DeclarationDef SEMICOLON
    7             | Declarations DeclarationDef error

    8 DeclarationDef: identifier COLON INTEGER
    9               | identifier COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   10               | identifier COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   11               | identifier error INTEGER
   12               | identifier error ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   13               | identifier error ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

   14 identifier: IDENT
   15           | identifier COMMA IDENT
   16           | identifier error IDENT

   17 Statements: StatementDef SEMICOLON
   18           | Statements StatementDef SEMICOLON
   19           | StatementDef error
   20           | Statements StatementDef error

   21 StatementDef: Var ASSIGN Expression
   22             | IF Bool_Exp THEN Statements ENDIF
   23             | IF Bool_Exp THEN Statements ELSE Statements ENDIF
   24             | WHILE Bool_Exp BEGINLOOP Statements ENDLOOP
   25             | DO BEGINLOOP Statements ENDLOOP WHILE Bool_Exp
   26             | FOR Var ASSIGN NUMBER SEMICOLON Bool_Exp SEMICOLON Var ASSIGN Expression BEGINLOOP Statements ENDLOOP
   27             | READ Var_loop
   28             | WRITE Var_loop
   29             | CONTINUE
   30             | RETURN Expression
   31             | Var error Expression
   32             | FOR Var error NUMBER error Bool_Exp error Var error Expression BEGINLOOP Statements ENDLOOP

   33 Var_loop: Var
   34         | Var_loop COMMA Var

   35 Var: IDENT
   36    | IDENT L_SQUARE_BRACKET Expression R_SQUARE_BRACKET
   37    | IDENT L_SQUARE_BRACKET Expression R_SQUARE_BRACKET L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

   38 Bool_Exp: Relation_And_Expr
   39         | Bool_Exp OR Relation_And_Expr

   40 Relation_And_Expr: Relation_Expr
   41                  | Relation_And_Expr AND Relation_Expr

   42 Relation_Expr: Expression Comp Expression
   43              | NOT Expression Comp Expression
   44              | TRUE
   45              | NOT TRUE
   46              | FALSE
   47              | NOT FALSE
   48              | L_PAREN Bool_Exp R_PAREN
   49              | NOT L_PAREN Bool_Exp R_PAREN
   50              | Expression error Expression
   51              | NOT Expression error Expression

   52 Comp: EQ
   53     | NEQ
   54     | LT
   55     | GT
   56     | LTE
   57     | GTE

   58 Expression: Mutiplicative_Expr
   59           | Expression ADD Mutiplicative_Expr
   60           | Expression SUB Mutiplicative_Expr

   61 Mutiplicative_Expr: Term
   62                   | Mutiplicative_Expr MULT Term
   63                   | Mutiplicative_Expr DIV Term
   64                   | Mutiplicative_Expr MOD Term

   65 Term: Var
   66     | SUB Var
   67     | NUMBER
   68     | SUB NUMBER
   69     | L_PAREN Expression R_PAREN
   70     | SUB L_PAREN Expression R_PAREN
   71     | IDENT L_PAREN Expression_loop R_PAREN
   72     | IDENT L_PAREN R_PAREN

   73 Expression_loop: Expression
   74                | Expression_loop COMMA Expression
   75                | Expression_loop error Expression


Terminals, with rules where they appear

"end of file" (0) 0
error (256) 4 7 11 12 13 16 19 20 31 32 50 51 75
FUNCTION (258) 3 4
BEGIN_PARAMS (259) 3 4
END_PARAMS (260) 3 4
BEGIN_LOCALS (261) 3 4
END_LOCALS (262) 3 4
BEGIN_BODY (263) 3 4
END_BODY (264) 3 4
INTEGER (265) 8 9 10 11 12 13
ARRAY (266) 9 10 12 13
OF (267) 9 10 12 13
IF (268) 22 23
THEN (269) 22 23
ENDIF (270) 22 23
ELSE (271) 23
WHILE (272) 24 25
DO (273) 25
FOR (274) 26 32
BEGINLOOP (275) 24 25 26 32
ENDLOOP (276) 24 25 26 32
CONTINUE (277) 29
READ (278) 27
WRITE (279) 28
AND (280) 41
OR (281) 39
NOT (282) 43 45 47 49 51
TRUE (283) 44 45
FALSE (284) 46 47
RETURN (285) 30
ADD (286) 59
SUB (287) 60 66 68 70
MULT (288) 62
DIV (289) 63
MOD (290) 64
EQ (291) 52
NEQ (292) 53
LT (293) 54
GT (294) 55
LTE (295) 56
GTE (296) 57
SEMICOLON (297) 3 6 17 18 26
COLON (298) 8 9 10
COMMA (299) 15 34 74
L_PAREN (300) 48 49 69 70 71 72
R_PAREN (301) 48 49 69 70 71 72
EQUAL (302)
L_SQUARE_BRACKET (303) 9 10 12 13 36 37
R_SQUARE_BRACKET (304) 9 10 12 13 36 37
ASSIGN (305) 21 26
IDENT (306) 3 4 14 15 16 35 36 37 71 72
NUMBER (307) 9 10 12 13 26 32 67 68
UMINUS (308)


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
program (55)
    on left: 1 2, on right: 0 2
function (56)
    on left: 3 4, on right: 2
Declarations (57)
    on left: 5 6 7, on right: 3 4 6 7
DeclarationDef (58)
    on left: 8 9 10 11 12 13, on right: 6 7
identifier (59)
    on left: 14 15 16, on right: 8 9 10 11 12 13 15 16
Statements (60)
    on left: 17 18 19 20, on right: 3 4 18 20 22 23 24 25 26 32
StatementDef (61)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32, on right: 17 18 19
    20
Var_loop (62)
    on left: 33 34, on right: 27 28 34
Var (63)
    on left: 35 36 37, on right: 21 26 31 32 33 34 65 66
Bool_Exp (64)
    on left: 38 39, on right: 22 23 24 25 26 32 39 48 49
Relation_And_Expr (65)
    on left: 40 41, on right: 38 39 41
Relation_Expr (66)
    on left: 42 43 44 45 46 47 48 49 50 51, on right: 40 41
Comp (67)
    on left: 52 53 54 55 56 57, on right: 42 43
Expression (68)
    on left: 58 59 60, on right: 21 26 30 31 32 36 37 42 43 50 51 59
    60 69 70 73 74 75
Mutiplicative_Expr (69)
    on left: 61 62 63 64, on right: 58 59 60 62 63 64
Term (70)
    on left: 65 66 67 68 69 70 71 72, on right: 61 62 63 64
Expression_loop (71)
    on left: 73 74 75, on right: 71 74 75


State 0

    0 $accept: . program "end of file"

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program . "end of file"
    2 program: program . function

    "end of file"  shift, and go to state 2
    FUNCTION       shift, and go to state 3

    function  go to state 4


State 2

    0 $accept: program "end of file" .

    $default  accept


State 3

    3 function: FUNCTION . IDENT SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY
    4         | FUNCTION . IDENT error BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENT  shift, and go to state 5


State 4

    2 program: program function .

    $default  reduce using rule 2 (program)


State 5

    3 function: FUNCTION IDENT . SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY
    4         | FUNCTION IDENT . error BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    error      shift, and go to state 6
    SEMICOLON  shift, and go to state 7


State 6

    4 function: FUNCTION IDENT error . BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_PARAMS  shift, and go to state 8


State 7

    3 function: FUNCTION IDENT SEMICOLON . BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_PARAMS  shift, and go to state 9


State 8

    4 function: FUNCTION IDENT error BEGIN_PARAMS . Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    $default  reduce using rule 5 (Declarations)

    Declarations  go to state 10


State 9

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS . Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    $default  reduce using rule 5 (Declarations)

    Declarations  go to state 11


State 10

    4 function: FUNCTION IDENT error BEGIN_PARAMS Declarations . END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY
    6 Declarations: Declarations . DeclarationDef SEMICOLON
    7             | Declarations . DeclarationDef error

    END_PARAMS  shift, and go to state 12
    IDENT       shift, and go to state 13

    DeclarationDef  go to state 14
    identifier      go to state 15


State 11

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS Declarations . END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY
    6 Declarations: Declarations . DeclarationDef SEMICOLON
    7             | Declarations . DeclarationDef error

    END_PARAMS  shift, and go to state 16
    IDENT       shift, and go to state 13

    DeclarationDef  go to state 14
    identifier      go to state 15


State 12

    4 function: FUNCTION IDENT error BEGIN_PARAMS Declarations END_PARAMS . BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_LOCALS  shift, and go to state 17


State 13

   14 identifier: IDENT .

    $default  reduce using rule 14 (identifier)


State 14

    6 Declarations: Declarations DeclarationDef . SEMICOLON
    7             | Declarations DeclarationDef . error

    error      shift, and go to state 18
    SEMICOLON  shift, and go to state 19


State 15

    8 DeclarationDef: identifier . COLON INTEGER
    9               | identifier . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   10               | identifier . COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   11               | identifier . error INTEGER
   12               | identifier . error ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   13               | identifier . error ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   15 identifier: identifier . COMMA IDENT
   16           | identifier . error IDENT

    error  shift, and go to state 20
    COLON  shift, and go to state 21
    COMMA  shift, and go to state 22


State 16

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS Declarations END_PARAMS . BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_LOCALS  shift, and go to state 23


State 17

    4 function: FUNCTION IDENT error BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS . Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    $default  reduce using rule 5 (Declarations)

    Declarations  go to state 24


State 18

    7 Declarations: Declarations DeclarationDef error .

    $default  reduce using rule 7 (Declarations)


State 19

    6 Declarations: Declarations DeclarationDef SEMICOLON .

    $default  reduce using rule 6 (Declarations)


State 20

   11 DeclarationDef: identifier error . INTEGER
   12               | identifier error . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   13               | identifier error . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   16 identifier: identifier error . IDENT

    INTEGER  shift, and go to state 25
    ARRAY    shift, and go to state 26
    IDENT    shift, and go to state 27


State 21

    8 DeclarationDef: identifier COLON . INTEGER
    9               | identifier COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   10               | identifier COLON . ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    INTEGER  shift, and go to state 28
    ARRAY    shift, and go to state 29


State 22

   15 identifier: identifier COMMA . IDENT

    IDENT  shift, and go to state 30


State 23

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS . Declarations END_LOCALS BEGIN_BODY Statements END_BODY

    $default  reduce using rule 5 (Declarations)

    Declarations  go to state 31


State 24

    4 function: FUNCTION IDENT error BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations . END_LOCALS BEGIN_BODY Statements END_BODY
    6 Declarations: Declarations . DeclarationDef SEMICOLON
    7             | Declarations . DeclarationDef error

    END_LOCALS  shift, and go to state 32
    IDENT       shift, and go to state 13

    DeclarationDef  go to state 14
    identifier      go to state 15


State 25

   11 DeclarationDef: identifier error INTEGER .

    $default  reduce using rule 11 (DeclarationDef)


State 26

   12 DeclarationDef: identifier error ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   13               | identifier error ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 33


State 27

   16 identifier: identifier error IDENT .

    $default  reduce using rule 16 (identifier)


State 28

    8 DeclarationDef: identifier COLON INTEGER .

    $default  reduce using rule 8 (DeclarationDef)


State 29

    9 DeclarationDef: identifier COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER
   10               | identifier COLON ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 34


State 30

   15 identifier: identifier COMMA IDENT .

    $default  reduce using rule 15 (identifier)


State 31

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations . END_LOCALS BEGIN_BODY Statements END_BODY
    6 Declarations: Declarations . DeclarationDef SEMICOLON
    7             | Declarations . DeclarationDef error

    END_LOCALS  shift, and go to state 35
    IDENT       shift, and go to state 13

    DeclarationDef  go to state 14
    identifier      go to state 15


State 32

    4 function: FUNCTION IDENT error BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS . BEGIN_BODY Statements END_BODY

    BEGIN_BODY  shift, and go to state 36


State 33

   12 DeclarationDef: identifier error ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER
   13               | identifier error ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 37


State 34

    9 DeclarationDef: identifier COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER
   10               | identifier COLON ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 38


State 35

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS . BEGIN_BODY Statements END_BODY

    BEGIN_BODY  shift, and go to state 39


State 36

    4 function: FUNCTION IDENT error BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY . Statements END_BODY

    IF        shift, and go to state 40
    WHILE     shift, and go to state 41
    DO        shift, and go to state 42
    FOR       shift, and go to state 43
    CONTINUE  shift, and go to state 44
    READ      shift, and go to state 45
    WRITE     shift, and go to state 46
    RETURN    shift, and go to state 47
    IDENT     shift, and go to state 48

    Statements    go to state 49
    StatementDef  go to state 50
    Var           go to state 51


State 37

   12 DeclarationDef: identifier error ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER
   13               | identifier error ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 52


State 38

    9 DeclarationDef: identifier COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER
   10               | identifier COLON ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 53


State 39

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY . Statements END_BODY

    IF        shift, and go to state 40
    WHILE     shift, and go to state 41
    DO        shift, and go to state 42
    FOR       shift, and go to state 43
    CONTINUE  shift, and go to state 44
    READ      shift, and go to state 45
    WRITE     shift, and go to state 46
    RETURN    shift, and go to state 47
    IDENT     shift, and go to state 48

    Statements    go to state 54
    StatementDef  go to state 50
    Var           go to state 51


State 40

   22 StatementDef: IF . Bool_Exp THEN Statements ENDIF
   23             | IF . Bool_Exp THEN Statements ELSE Statements ENDIF

    NOT      shift, and go to state 55
    TRUE     shift, and go to state 56
    FALSE    shift, and go to state 57
    SUB      shift, and go to state 58
    L_PAREN  shift, and go to state 59
    IDENT    shift, and go to state 60
    NUMBER   shift, and go to state 61

    Var                 go to state 62
    Bool_Exp            go to state 63
    Relation_And_Expr   go to state 64
    Relation_Expr       go to state 65
    Expression          go to state 66
    Mutiplicative_Expr  go to state 67
    Term                go to state 68


State 41

   24 StatementDef: WHILE . Bool_Exp BEGINLOOP Statements ENDLOOP

    NOT      shift, and go to state 55
    TRUE     shift, and go to state 56
    FALSE    shift, and go to state 57
    SUB      shift, and go to state 58
    L_PAREN  shift, and go to state 59
    IDENT    shift, and go to state 60
    NUMBER   shift, and go to state 61

    Var                 go to state 62
    Bool_Exp            go to state 69
    Relation_And_Expr   go to state 64
    Relation_Expr       go to state 65
    Expression          go to state 66
    Mutiplicative_Expr  go to state 67
    Term                go to state 68


State 42

   25 StatementDef: DO . BEGINLOOP Statements ENDLOOP WHILE Bool_Exp

    BEGINLOOP  shift, and go to state 70


State 43

   26 StatementDef: FOR . Var ASSIGN NUMBER SEMICOLON Bool_Exp SEMICOLON Var ASSIGN Expression BEGINLOOP Statements ENDLOOP
   32             | FOR . Var error NUMBER error Bool_Exp error Var error Expression BEGINLOOP Statements ENDLOOP

    IDENT  shift, and go to state 48

    Var  go to state 71


State 44

   29 StatementDef: CONTINUE .

    $default  reduce using rule 29 (StatementDef)


State 45

   27 StatementDef: READ . Var_loop

    IDENT  shift, and go to state 48

    Var_loop  go to state 72
    Var       go to state 73


State 46

   28 StatementDef: WRITE . Var_loop

    IDENT  shift, and go to state 48

    Var_loop  go to state 74
    Var       go to state 73


State 47

   30 StatementDef: RETURN . Expression

    SUB      shift, and go to state 58
    L_PAREN  shift, and go to state 75
    IDENT    shift, and go to state 60
    NUMBER   shift, and go to state 61

    Var                 go to state 62
    Expression          go to state 76
    Mutiplicative_Expr  go to state 67
    Term                go to state 68


State 48

   35 Var: IDENT .
   36    | IDENT . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET
   37    | IDENT . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

    L_SQUARE_BRACKET  shift, and go to state 77

    $default  reduce using rule 35 (Var)


State 49

    4 function: FUNCTION IDENT error BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements . END_BODY
   18 Statements: Statements . StatementDef SEMICOLON
   20           | Statements . StatementDef error

    END_BODY  shift, and go to state 78
    IF        shift, and go to state 40
    WHILE     shift, and go to state 41
    DO        shift, and go to state 42
    FOR       shift, and go to state 43
    CONTINUE  shift, and go to state 44
    READ      shift, and go to state 45
    WRITE     shift, and go to state 46
    RETURN    shift, and go to state 47
    IDENT     shift, and go to state 48

    StatementDef  go to state 79
    Var           go to state 51


State 50

   17 Statements: StatementDef . SEMICOLON
   19           | StatementDef . error

    error      shift, and go to state 80
    SEMICOLON  shift, and go to state 81


State 51

   21 StatementDef: Var . ASSIGN Expression
   31             | Var . error Expression

    error   shift, and go to state 82
    ASSIGN  shift, and go to state 83


State 52

   12 DeclarationDef: identifier error ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER
   13               | identifier error ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    OF                shift, and go to state 84
    L_SQUARE_BRACKET  shift, and go to state 85


State 53

    9 DeclarationDef: identifier COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER
   10               | identifier COLON ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    OF                shift, and go to state 86
    L_SQUARE_BRACKET  shift, and go to state 87


State 54

    3 function: FUNCTION IDENT SEMICOLON BEGIN_PARAMS Declarations END_PARAMS BEGIN_LOCALS Declarations END_LOCALS BEGIN_BODY Statements . END_BODY
   18 Statements: Statements . StatementDef SEMICOLON
   20           | Statements . StatementDef error

    END_BODY  shift, and go to state 88
    IF        shift, and go to state 40
    WHILE     shift, and go to state 41
    DO        shift, and go to state 42
    FOR       shift, and go to state 43
    CONTINUE  shift, and go to state 44
    READ      shift, and go to state 45
    WRITE     shift, and go to state 46
    RETURN    shift, and go to state 47
    IDENT     shift, and go to state 48

    StatementDef  go to state 79
    Var           go to state 51


State 55

   43 Relation_Expr: NOT . Expression Comp Expression
   45              | NOT . TRUE
   47              | NOT . FALSE
   49              | NOT . L_PAREN Bool_Exp R_PAREN
   51              | NOT . Expression error Expression

    TRUE     shift, and go to state 89
    FALSE    shift, and go to state 90
    SUB      shift, and go to state 58
    L_PAREN  shift, and go to state 91
    IDENT    shift, and go to state 60
    NUMBER   shift, and go to state 61
